# aa-moonoretax

./: .dockerignore  README.md  pyproject.toml
moontax/: __init__.py  access.py  admin.py  app_settings.py  apps.py  auth_hooks.py  forms.py  managers.py  models.py  notifications.py  ores.py  providers.py  tasks.py  urls.py  views.py
moontax/core/: compression.py  matching.py  notifications_parse.py  reconcile.py  tax.py  timeutils.py
moontax/management/commands/: moontax_load_ores.py
moontax/migrations/: 0001_initial.py  0002_oretype.py  0003_configuration_table_page_size.py  0004_moonpopsummary.py  0005_notificationsetting.py  0006_oretype_base_type_id.py  0007_split_mining_payment_corp.py
moontax/static/moontax/css/: moontax.css
moontax/templates/moontax/: _tabs.html  admin.html  base.html  dashboard.html  notifications.html  staff.html
moontax/tests/: ci_settings.py  helpers.py  test_access.py  test_compression.py  test_dashboard_mined_pops.py  test_ledger.py  test_new_features.py  test_notifications_parse.py  test_poll_notifications_dedup.py  test_providers.py  test_reconcile.py  test_reminders.py  test_staff_pop_ore.py  test_tax.py  test_timeutils.py  test_token_gate.py
